--- a/Styles/MainNav.css
+++ b/Styles/MainNav.css
@@ -6,9 +6,13 @@
 }
 /* 螢幕大於 768：寬螢幕導覽連結顯示 */
 @media (min-width: 768px) {
-  height: 44px;
+  #mainNav {
+    height: 44px;
+  }
 }
 /* 螢幕小於 768：寬螢幕導覽連結隱藏 */
 @media (max-width: 767.98px) {
-  height: 48px;
+  #mainNav {
+    height: 48px;
+  }
 }
