--- a/Styles/MainNav.css
+++ b/Styles/MainNav.css
@@ -7,13 +7,11 @@
 }
 /* 最上方導覽列中的網站標題 */
 .navbar-brand {
-  font-size: 18px;
   font-weight: 480;
-  color: rgb(48, 48, 48);
   padding: 0px 10px;
-}
-.navbar-brand:hover {
-  color: black !important;
+  --bs-navbar-brand-font-size: 18px;
+  --bs-navbar-brand-color: rgb(48, 48, 48);
+  --bs-navbar-brand-hover-color: black;
 }
 /* 小螢幕最上方導覽列中的選單按鈕 */
 #hamburgerBtn {
