--- a/Styles/MainNav.css
+++ b/Styles/MainNav.css
@@ -2,6 +2,7 @@
 #mainNav {
   height: 44px;
   z-index: 1022;
+  line-height: 44px;
   transition: all .35s ease;
   background-color: rgb(243, 243, 243);
 }
