--- a/Styles/MainNav.css
+++ b/Styles/MainNav.css
@@ -31,6 +31,20 @@
   height: 44px;
   display: none;
 }
+/* 寬螢幕最上方導覽列中的搜尋框 */
+#wideScreenSearchBar {
+  padding-left: 1px;
+  color: rgb(51, 51, 51);
+}
+#wideScreenSearchBar::placeholder {
+  font-size: 16px;
+  height: 20.87px;
+  color: rgb(110, 110, 115);
+}
+#wideScreenSearchBar::-webkit-search-cancel-button,
+#wideScreenSearchBar::-webkit-search-results-button {
+  -webkit-appearance: none;
+}
 /* 小螢幕最上方導覽列中的選單按鈕 */
 #hamburgerBtn {
   font-size: 26px;
