--- a/Styles/MainNav.css
+++ b/Styles/MainNav.css
@@ -33,6 +33,8 @@
 }
 /* 寬螢幕最上方導覽列中的搜尋框 */
 #wideScreenSearchBar {
+  font-size: 20px;
+  font-weight: 300;
   padding-left: 1px;
   color: rgb(51, 51, 51);
 }
