--- a/Styles/MainNav.css
+++ b/Styles/MainNav.css
@@ -68,6 +68,18 @@
   color: rgb(0, 102, 204);
   background-color: rgb(245, 245, 247);
 }
+/* 寬螢幕最上方導覽列右方的放大鏡（搜尋時會變叉叉） */
+#wideScreenSearchBtn {
+  font-size: 18px;
+  padding: 0px 10px;
+  color: rgb(130, 130, 130);
+}
+#wideScreenSearchBtn .bi-search:hover {
+  color: rgb(102, 102, 102);
+}
+#wideScreenSearchBtn .bi-x-lg:hover {
+  color: black;
+}
 /* 小螢幕最上方導覽列中的選單按鈕 */
 #hamburgerBtn {
   font-size: 26px;
