--- a/Styles/MainNav.css
+++ b/Styles/MainNav.css
@@ -93,6 +93,10 @@
   --bs-btn-color: rgb(48, 48, 48);
   --bs-btn-hover-color: black;
 }
+/* 小螢幕展開全螢幕的導覽列 */
+#fullScreenNav {
+  z-index: 1021;
+}
 /* 螢幕大於 768：寬螢幕導覽連結顯示 */
 @media (min-width: 768px) {
   #mainNav {
