--- a/Styles/MainNav.css
+++ b/Styles/MainNav.css
@@ -3,8 +3,8 @@
   height: 44px;
   z-index: 1022;
   line-height: 44px;
-  transition: all .35s ease;
   background-color: rgb(243, 243, 243);
+  transition: all .35s ease, visibility 0s ease;
 }
 /* 最上方導覽列中的網站標題 */
 .navbar-brand {
