--- a/Styles/MainNav.css
+++ b/Styles/MainNav.css
@@ -117,6 +117,9 @@
   color: rgb(51, 51, 51);
   background-color: rgb(215, 215, 215);
 }
+#smallScreenSearchBar::placeholder {
+  color: rgb(110, 110, 115);
+}
 #smallScreenSearchBar::-webkit-search-cancel-button,
 #smallScreenSearchBar::-webkit-search-results-button {
   -webkit-appearance: none;
