--- a/Styles/MainNav.css
+++ b/Styles/MainNav.css
@@ -112,7 +112,8 @@
 /* 小螢幕展開全螢幕導覽列的搜尋框 */
 #smallScreenSearchBar {
   font-size: 17px;
-  font-weight: 300;
+  font-weight: 250;
+  line-height: 21px;
   padding-left: 1px;
   color: rgb(51, 51, 51);
   background-color: rgb(215, 215, 215);
