--- a/Styles/MainNav.css
+++ b/Styles/MainNav.css
@@ -155,8 +155,11 @@
   color: rgb(51, 51, 51);
   transition: all .35s ease;
 }
-.smallScreenSearchQuickLink:hover {
+.smallScreenSearchQuickLink.hoverBlack:hover {
   color: black;
+}
+.smallScreenSearchQuickLink.hoverBlue:hover {
+  color: rgb(40, 151, 255);
 }
 /* 小螢幕展開全螢幕導覽列的快速連結分隔線 */
 .quickLinkHr {
