--- a/Styles/SecondNav.css
+++ b/Styles/SecondNav.css
@@ -11,6 +11,15 @@
   max-width: 1024px;
   transition: all .35s ease;
 }
+/* 寬螢幕上方導覽列二右方的「熱門主題」按鈕 */
+#wideScreenHotTopicBtn {
+  font-size: 11px;
+  font-weight: 300;
+  padding: 2px 0px;
+  margin-right: 52px;
+  --bs-btn-color: rgb(29, 29, 31);
+  --bs-btn-hover-color: rgb(0, 102, 204);
+}
 /* 螢幕大於 768：上方導覽列二變矮 */
 @media (min-width: 768px) {
   #secondNav {
