--- a/Styles/SecondNav.css
+++ b/Styles/SecondNav.css
@@ -27,6 +27,11 @@
   --bs-btn-color: rgb(29, 29, 31);
   --bs-btn-hover-color: rgb(0, 102, 204);
 }
+/* 小螢幕上方導覽列二展開的熱門主題區塊 */
+#wideScreenHotTopics {
+  z-index: 1022;
+  background-color: rgb(245, 245, 245);
+}
 /* 螢幕大於 768：上方導覽列二變矮 */
 @media (min-width: 768px) {
   #secondNav {
