--- a/Styles/Home.css
+++ b/Styles/Home.css
@@ -12,6 +12,10 @@
   margin-bottom: 24px;
   color: rgb(29, 29, 31);
 }
+/* 文章 hover 時放大圖片 */
+#homeNewestPost:hover #homeNewestPostImg, {
+  transform: scale(1.03);
+}
 /* 最新文章 */
 #homeNewestPost {
   border-radius: 16px;
