--- a/Styles/Home.css
+++ b/Styles/Home.css
@@ -17,7 +17,7 @@
   border-radius: 16px;
 }
 .homeNewPost:hover .homeNewPostImg {
-	transform: scale(1.03);
+  transform: scale(1.03);
 }
 /* 最新文章的圖片容器 */
 #homeNewestPostImgContainer {
@@ -38,33 +38,45 @@
 }
 /* 最新文章（1～10）*/
 .homeNewPostCol {
-	margin-top: 36px;
+  margin-top: 36px;
 }
 #homeNewPost1, #homeNewPost3 {
-	margin-right: 18px;
+  margin-right: 18px;
 }
 #homeNewPost2, #homeNewPost4 {
-	margin-left: 18px;
+  margin-left: 18px;
 }
 .homeNewPost1-4ImgContainer {
-	min-height: 266px;
-	background-color: rgb(250, 250, 250);
+  min-height: 266px;
+  background-color: rgb(250, 250, 250);
 }
 .homeNewPost1-4TextContainer {
-	padding: 32px;
+  padding: 32px;
 }
 .homeNewPost1-4Title {
-	font-size: 22px;
-	font-weight: 500;
-	line-height: 28px;
-	color: rgb(29, 29, 31);
+  font-size: 22px;
+  font-weight: 500;
+  line-height: 28px;
+  color: rgb(29, 29, 31);
 }
 .homeNewPost1-4Date {
-	font-size: 14px;
-	font-weight: 450;
-	margin-top: 12px;
-	line-height: 18px;
-	color: rgb(110, 110, 115);
+  font-size: 14px;
+  font-weight: 450;
+  margin-top: 12px;
+  line-height: 18px;
+  color: rgb(110, 110, 115);
+}
+#homeNewPost5, #homeNewPost8 {
+	margin-left: 0px;
+  margin-right: 18px;
+}
+#homeNewPost6, #homeNewPost9 {
+  margin-left: 18px;
+  margin-right: 18px;
+}
+#homeNewPost7, #homeNewPost10 {
+  margin-left: 18px;
+	margin-right: 0px;
 }
 /* 螢幕小於 1068 */
 @media only screen and (max-width: 1068px) {
@@ -90,29 +102,49 @@
     font-size: 20px;
     line-height: 25px;
   }
-	/* 最新文章（1～10）*/
-	.homeNewPostCol {
-		margin-top: 24px;
-	}
-	#homeNewPost1, #homeNewPost3 {
-		margin-right: 12px;
-	}
-	#homeNewPost2, #homeNewPost4 {
-		margin-left: 12px;
-	}
-	.homeNewPost1-4ImgContainer {
-		min-height: 187px;
-	}
-	.homeNewPost1-4TextContainer {
-		padding: 24px;
-	}
-	.homeNewPost1-4Title {
-		font-size: 17px;
-		line-height: 23px;
-	}
-	.homeNewPost1-4Date {
-		margin-top: 8px;
-	}
+  /* 最新文章（1～10）*/
+  .homeNewPostCol {
+    margin-top: 24px;
+  }
+  #homeNewPost1, #homeNewPost3 {
+    margin-right: 12px;
+  }
+  #homeNewPost2, #homeNewPost4 {
+    margin-left: 12px;
+  }
+  .homeNewPost1-4ImgContainer {
+    min-height: 187px;
+  }
+  .homeNewPost1-4TextContainer {
+    padding: 24px;
+  }
+  .homeNewPost1-4Title {
+    font-size: 17px;
+    line-height: 23px;
+  }
+  .homeNewPost1-4Date {
+    margin-top: 8px;
+  }
+	#homeNewPost5, #homeNewPost7, #homeNewPost9 {
+    margin-left: 0px;
+    margin-right: 12px;
+  }
+  #homeNewPost6, #homeNewPost8, #homeNewPost10 {
+    margin-left: 12px;
+    margin-right: 0px;
+  }
+	/*
+	#homeThirdPostA5, #homeThirdPostA8 {
+        margin-right: 12px;
+      }
+      #homeThirdPostA6, #homeThirdPostA9 {
+        margin-left: 12px;
+        margin-right: 12px;
+      }
+      #homeThirdPostA7, #homeThirdPostA10 {
+        margin-left: 12px;
+      }
+	*/
 }
 /* 螢幕小於 767.98 */
 @media only screen and (max-width: 767.98px) {
@@ -139,14 +171,18 @@
     font-size: 17px;
     font-weight: 500;
     line-height: 23px;
-	}
-	#homeNewPost1, #homeNewPost3 {
-		margin-right: 0px;
-	}
-	#homeNewPost2, #homeNewPost4 {
-		margin-left: 0px;
-	}
-	.homeNewPost1-4ImgContainer {
-		min-height: 158px;
-	}
+  }
+  #homeNewPost1, #homeNewPost3 {
+    margin-right: 0px;
+  }
+  #homeNewPost2, #homeNewPost4 {
+    margin-left: 0px;
+  }
+  .homeNewPost1-4ImgContainer {
+    min-height: 158px;
+  }
+	#homeNewPost5, #homeNewPost6, #homeNewPost7, #homeNewPost8, #homeNewPost9, #homeNewPost10 {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
 }
