--- a/Styles/Home.css
+++ b/Styles/Home.css
@@ -138,6 +138,17 @@
     margin-right: 0px;
   }
 }
+/* 螢幕小於 991.98 */
+@media only screen and (max-width: 991.98px) {
+  #homeNewPost5, #homeNewPost7, #homeNewPost9 {
+    margin-left: 0px;
+    margin-right: 12px;
+  }
+  #homeNewPost6, #homeNewPost8, #homeNewPost10 {
+    margin-left: 12px;
+    margin-right: 0px;
+  }
+}
 /* 螢幕小於 767.98 */
 @media only screen and (max-width: 767.98px) {
   /* 首頁容器 */
