--- a/Styles/Home.css
+++ b/Styles/Home.css
@@ -14,10 +14,18 @@
 }
 /* 最新文章 */
 .homeNewPost {
+  opacity: 0;
+  position: relative;
   border-radius: 16px;
+  transform: translateY(20%);
+  transition: .8s all ease;
 }
 .homeNewPost:hover .homeNewPostImg {
   transform: scale(1.03);
+}
+.homeNewPost.show {
+  opacity: 1;
+  transform: translateY(0);
 }
 /* 最新文章的圖片容器 */
 #homeNewestPostImgContainer {
