--- a/Styles/Footer.css
+++ b/Styles/Footer.css
@@ -45,8 +45,7 @@
   display: none;
   font-size: 12px;
   font-weight: 300;
-  margin-top: 17px;
-  margin-bottom: 12px;
+  margin: 12px 0px;
   color: rgb(110, 110, 115);
 }
 .bottomFooterLink {
