--- a/Styles/Post.css
+++ b/Styles/Post.css
@@ -69,7 +69,7 @@
     max-width: 402px;
     padding: 40px 20px 0px;
   }
-  ##blogPostBottomSection {
+  #blogPostBottomSection {
     max-width: 402px;
   }
   #blogPostShareTitle {
